# Hue_Project

./: CMakeLists.txt  HueManager.cpp  HueManager.h  README.md  Utility.cpp  Utility.h  b.sh  main.cpp  my_curl.hpp
lib/my_curl/: my_curl.hpp
